<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_userinfo_notice"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp" 
    android:background="@drawable/shuyou_dialog_bg">
    <TextView 
        style="@style/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:text="@string/notice"
        />
    <ImageView 
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="1dp"
        android:background="@color/dialog_text"
        android:contentDescription="@string/div_line"/>
    <TextView
        style="@style/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="20dp"
        android:text="@string/userinfo_notice"/>
</RelativeLayout>