<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@color/userinfo_bg"
    android:layout_width="match_parent"
    tools:context=".UserInfoActivity" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/shuyou_top_bg">
        <TextView 
            style="@style/titleText"
            android:text="书友信息"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <ImageView
            android:id="@+id/userinfo_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/shuyou_top_btn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:text="@string/back"
            android:textSize="17sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <ScrollView
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_alignParentTop="true"
    	android:layout_marginTop="80dp"
    	android:layout_marginLeft="10dp"
    	android:scrollbarStyle="outsideOverlay"  >
       <LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    <RelativeLayout 
			        android:id="@+id/userinfo_usrlogo"
			        android:layout_width="match_parent"
			    	android:layout_height="80dp"
			    	android:background="@drawable/shuyou_userinfo_list_top">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/usr_logo"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <ImageView
		    	        android:id="@+id/userinfo_con_usrlogo"
		    	        android:layout_width="60dp"
		    	        android:layout_height="60dp"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        android:src="@drawable/ic_launcher"
		    	        android:contentDescription="@string/usr_logo"/>
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/userinfo_nickname"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_med">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/nick_name"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/userinfo_con_nickname"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"/>
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/userinfo_sex"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_med">
			    	<TextView
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/sex"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/userinfo_con_sex"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"/>
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/userinfo_age"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_bot">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/age"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/userinfo_con_age"
		    	        style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:text="吉大南校"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        />
			    </RelativeLayout>
			</LinearLayout>
			
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:orientation="vertical">
			    <RelativeLayout 
			        android:id="@+id/userinfo_phonenum"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_top">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/phone_num"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/userinfo_con_phonenum"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"/>
		    	    
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/userinfo_qq"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_med">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/qq"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/userinfo_con_qq"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        />
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/userinfo_wechat"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_bot">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/wechat"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/userinfo_con_wechat"
		    	        style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        />
			    </RelativeLayout>
			</LinearLayout>
		</LinearLayout>
  	</ScrollView>
</RelativeLayout>