<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/userinfo_bg"
    tools:context=".UserInfoActivity" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/shuyou_top_bg">
        <TextView 
            style="@style/titleText"
            android:id="@+id/register_title_text"
            android:text="个人信息完善"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <RelativeLayout
            android:visibility="gone"
            android:id="@+id/register_back_area"
            android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="10dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:background="@drawable/shuyou_top_btn">
	        <TextView
	            android:id="@+id/register_back"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:textSize="17sp"
	            android:textStyle="bold"
	            android:text="@string/back"/>
        </RelativeLayout>
        <RelativeLayout 
             android:visibility="gone"
	         android:id="@+id/register_confirm"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:layout_centerVertical="true"
	         android:layout_alignParentRight="true"
	         android:layout_marginRight="10dp"
	         android:background="@drawable/shuyou_top_btn">
		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:layout_centerInParent="true"
		         android:textSize="17sp"
		         android:textStyle="bold"
		         android:text="@string/confirm"/>
	     </RelativeLayout>
    </RelativeLayout>
    <ScrollView
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_alignParentTop="true"
    	android:layout_marginTop="80dp"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:scrollbarStyle="outsideOverlay"  >
       <LinearLayout 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    <RelativeLayout 
			        android:id="@+id/register_usrlogo"
			        android:layout_width="match_parent"
			    	android:layout_height="80dp"
			    	android:background="@drawable/shuyou_userinfo_list_top">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/usr_logo"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <ImageView
		    	        android:id="@+id/register_con_usrlogo"	    	        
		    	        android:layout_width="60dp"
		    	        android:layout_height="60dp"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        android:contentDescription="@string/usr_logo"/>
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/register_nickname"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_med">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/nick_name"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/register_con_nickname"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"/>
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/register_sex"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_med">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/sex"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/register_con_sex"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"/>
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/register_age"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_bot">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/age"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/register_con_age"
		    	        style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:text="吉大南校"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        />
			    </RelativeLayout>
			</LinearLayout>
			
			<LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="10dp"
			    android:orientation="vertical">
			    <RelativeLayout 
			        android:id="@+id/register_phonenum"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_top">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/phone_num"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/register_con_phonenum"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"/>
		    	    
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/register_qq"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_med">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/qq"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/register_con_qq"
		    	        style="@style/loginText"
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        />
			    </RelativeLayout>
			    <RelativeLayout 
			        android:id="@+id/register_wechat"
			        android:layout_width="match_parent"
			    	android:layout_height="50dp"
			    	android:background="@drawable/shuyou_userinfo_list_bot">
			    	<TextView 
			    	    style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_alignParentLeft="true"
			    	    android:layout_marginLeft="20dp"
			    	    android:layout_centerVertical="true"
			    	    android:text="@string/wechat"/>  
			    	<ImageView 
		    	        android:layout_width="wrap_content"
		    	        android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="10dp"
		    	        android:src="@drawable/shuyou_detail_array"
		    	        android:contentDescription="@string/array_pic"/>
		    	    <TextView
		    	        android:id="@+id/register_con_wechat"
		    	        style="@style/loginText"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
		    	        android:layout_alignParentRight="true"
		    	        android:layout_centerVertical="true"
		    	        android:layout_marginRight="60dp"
		    	        />
			    </RelativeLayout>
			</LinearLayout>
			
			<RelativeLayout 
			    android:id="@+id/register_confirm_button"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
			    android:layout_marginRight="20dp"
			    android:layout_marginTop="50dp"
		        android:layout_gravity="center_horizontal"
		        android:background="@drawable/shuyou_login_button_bg">
		        <TextView 
		            style="@style/dialog_button_text"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="8dp"
			        android:layout_centerHorizontal="true"
			        android:text="确 认 "/>
		        <ProgressBar
		            android:id="@+id/register_progress"
		            android:layout_width="20dp"
		            android:layout_height="20dp"
		            android:layout_alignParentRight="true"
		            android:layout_marginTop="8dp"
		            android:visibility="invisible"/>
		    </RelativeLayout>
		</LinearLayout>
  	</ScrollView>
</RelativeLayout>